<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	>

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:gravity="start|center"
		android:minHeight="?attr/actionBarSize"
		app:navigationIcon="@drawable/ic_back"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="horizontal"
			>

			<TextView
				style="@style/Base.TextAppearance.AppCompat.Title"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:text="@string/back_title"
				android:textColor="@android:color/white"
				/>

			<TextView
				android:id="@+id/title_menu_item"
				style="@style/Base.TextAppearance.AppCompat.Title"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="center"
				android:ellipsize="end"
				android:gravity="center"
				android:lines="1"
				android:maxLines="1"
				android:text="@string/title_quiz_result"
				android:textColor="@android:color/white"
				android:textStyle="normal"
				/>
		</LinearLayout>
	</android.support.v7.widget.Toolbar>

	<TextView
		android:id="@+id/result"
		style="@style/Base.TextAppearance.AppCompat.Title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		/>

	<TextView
		style="@style/Base.TextAppearance.AppCompat.Title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:text="@string/title_ranking"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center"
		android:orientation="vertical"
		>

		<com.svdroid.scoreview.ScoreView
			android:id="@+id/score_board"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			/>


	</LinearLayout>

	<Button
		android:id="@+id/btn_try_again"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:layout_margin="16dp"
		android:background="@drawable/slide_button_bg"
		android:text="@string/btn_try_again_title"
		android:textColor="#fff"
		android:textSize="16sp"
		/>

</LinearLayout>