<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	>

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:gravity="start|center"
		android:minHeight="?attr/actionBarSize"
		app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
		app:navigationIcon="@drawable/ic_back"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="horizontal"
			>

			<TextView
				style="@style/Base.TextAppearance.AppCompat.Title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/back_title"
				android:textColor="@android:color/white"
				/>

			<TextView
				android:id="@+id/title_menu_item"
				style="@style/Base.TextAppearance.AppCompat.Title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_weight="1"
				android:ellipsize="end"
				android:gravity="center"
				android:lines="1"
				android:maxLines="1"
				android:text="@string/app_name"
				android:textColor="@android:color/white"
				/>


		</LinearLayout>

	</android.support.v7.widget.Toolbar>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="vertical"
		>

		<TextView
			android:id="@+id/edit_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="70dp"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:textSize="32sp"
			android:textStyle="bold"
			android:textColor="@android:color/black"
			/>



		<Button
			android:id="@+id/generate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="36dp"
			android:background="@drawable/slide_button_bg"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:text="@string/generate"
			android:textColor="@android:color/white"
			/>

		<Button
			android:id="@+id/copy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="45dp"
			android:background="@drawable/slide_button_bg"
			android:visibility="invisible"
			android:text="@string/copy"
			android:textColor="@android:color/white"
			/>
	</LinearLayout>


</LinearLayout>




