<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	>

	<android.support.design.widget.CoordinatorLayout
		android:id="@+id/coordinator_container"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		>

		<android.support.design.widget.AppBarLayout
			android:id="@+id/app_bar_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			>

			<android.support.design.widget.CollapsingToolbarLayout
				android:id="@+id/collapsingToolbarLayout"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:contentScrim="?attr/colorPrimary"
				app:expandedTitleMarginStart="64dp"
				app:layout_scrollFlags="scroll|exitUntilCollapsed"
				>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal"
					android:paddingTop="?attr/actionBarSize"
					>

					<ImageView
						android:id="@+id/quiz_image"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:adjustViewBounds="true"
						android:contentDescription="@null"
						android:scaleType="fitXY"
						android:src="@drawable/q_3"
						app:layout_collapseMode="parallax"
						/>
				</LinearLayout>

				<android.support.v7.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					android:background="?attr/colorPrimary"
					android:gravity="start|center"
					app:layout_collapseMode="pin"
					app:navigationIcon="@drawable/ic_back"
					app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
					app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
					>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="top"
						android:orientation="horizontal"
						>


						<TextView
							style="@style/Base.TextAppearance.AppCompat.Title"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:gravity="center"
							android:text="@string/back_title"
							android:textColor="@android:color/white"

							/>

						<TextView
							android:id="@+id/title_menu_item"
							style="@style/Base.TextAppearance.AppCompat.Title"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:layout_gravity="top|center_horizontal"
							android:ellipsize="end"
							android:gravity="center"
							android:lines="1"
							android:maxLines="1"
							android:text="@string/item_9"
							android:textColor="@android:color/white"
								/>

					</LinearLayout>

				</android.support.v7.widget.Toolbar>
			</android.support.design.widget.CollapsingToolbarLayout>
		</android.support.design.widget.AppBarLayout>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/quiz"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			app:layout_behavior="@string/appbar_scrolling_view_behavior"
			/>

	</android.support.design.widget.CoordinatorLayout>

	<Button
		android:id="@+id/btn_next"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:background="@drawable/slide_button_bg"
		android:enabled="false"
		android:text="@string/btn_next_title"
		android:visibility="gone"
		/>

</LinearLayout>